# moirai

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build-lib.sh  makefile  pyproject.toml  re-create_cmake.sh  stats  stats.txt  test_moirai.py
moirai/: README.md  __about__.py  main.py  pyproject.toml
moirai/core/: base_task.py  engine.py  job.py  moirai_type.py  task_parameter.py  task_registry.py  task_status.py
moirai/core/tasks/: base_task.py  end_task.py  print_task.py  start_task.py  string_task.py
moirai/core/tasks copy/: end_task.py  file_processing.py  print_task.py  start_task.py  string_task.py
moirai/moirai/stubs/: moirai_module.pyi
moirai/stubs/: moirai.pyi
moirai_engine/: __about__.py  main.py
moirai_engine/actions/: error_action.py
moirai_engine/core/: engine.py  job.py
moirai_engine/sockets/: __init__.py
moirai_engine/tasks/: print_task.py  task.py
moirai_engine/utils/: samples.py
playground/: main.py
sample_jobs/: 00.helloWorld.json  sample.json
src/: Engine.cpp  Engine.hpp  Job.cpp  TaskRegistry.hpp  TaskSocket.cpp  TaskSocket.hpp  bindings.cpp  common.hpp  errors.hpp  job.hpp  main.cpp  socket.hpp
src/core/: engine.hpp
src/moirai/: main.py
src/moirai/core/task/: base_task.py  start_task.py
src/moirai/core/task/primitives/: string_task.py
src/tasks/: BaseTask.cpp  BaseTask.hpp  EndTask.hpp  FailTask.hpp  PrintTask.hpp  StartTask.hpp  StringTask.hpp  Task.cpp  Task.hpp  base_task.hpp  print_task.hpp  string_task.hpp
tests/tasks/: test_start_task.py
