[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moirai"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Fernando Crozetta", email = "fernando@czetta.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/fcrozetta/moirai#readme"
Issues = "https://github.com/fcrozetta/moirai/issues"
Source = "https://github.com/fcrozetta/moirai"

[tool.hatch.version]
path = "moirai/__about__.py"


[tool.coverage.run]
source_pkgs = ["moirai", "tests"]
branch = true
parallel = true
omit = ["moirai/__about__.py"]

[tool.coverage.paths]
moirai = ["moirai", "*/moirai/moirai"]
tests = ["tests", "*/moirai/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.hatch.envs.moirai]
dependencies = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.1.0"]

[tool.hatch.envs.moirai.scripts]
test = "pytest tests/ --cov=src --cov-report=term-missing"
lint = ["ruff check .", "mypy src tests"]
format = ["ruff check --fix ."]

[tool.hatch.envs.moirai.env-vars]
PY_COLORS = "1"
PYTHONPATH = "."

[tool.hatch.envs.release]
dependencies = []
[tool.hatch.build]
targets = { wheel = { universal = true } }
