[build-system]
requires = ["hatchling", "pybind11"]
build-backend = "hatchling.build"

[project]
name = "moirai"
dynamic = ["version"]
description = "A Python package for the engine that powers anake project."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Fernando Crozetta", email = "fernando@czetta.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/fcrozetta/moirai#readme"
Issues = "https://github.com/fcrozetta/moirai/issues"
Source = "https://github.com/fcrozetta/moirai"

[tool.hatch.version]
path = "src/moirai/__about__.py"

[tool.hatch.build.targets.wheel]
dependencies = ["pybind11"]
include = ["stubs/**"]

[tool.hatch.envs.default]
dependencies = ["pybind11", "pybind11-stubgen"]
path = ".venv"

[tool.hatch.build.targets.sdist]
include = ["stubs/**"]

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/moirai tests}"

[tool.coverage.run]
source_pkgs = ["moirai", "tests"]
branch = true
parallel = true
omit = ["src/moirai/__about__.py"]

[tool.coverage.paths]
moirai = ["src/moirai", "*/moirai/src/moirai"]
tests = ["tests", "*/moirai/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
